@@ -1,3 +1,10 @@
+2011-08-20  Christian Kauhaus <kc@gocept.com>
+
+	* Rework Controller class to take only an Evaluator object and no Probe
+	object. To separate Probe and Evaluator remains an implementation
+	pattern but is not enforced by the API anymore.
+	* Re-add Cookie class to 1.0.x series (#9266).
+
 2011-08-02  Christian Kauhaus <kc@gocept.com>
 
 	* Add Controller class and provide enough code to get the check_http
